# robotic603_finalproject

./: .gitignore  Dockerfile  README.md  README0.md  docker-compose.yaml  setup.bash  triton_noetic.service
catkin_ws/src/stingray_camera/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/stingray_camera/config/: lds_2d.lua  triton_devices.yaml
catkin_ws/src/stingray_camera/launch/: triton.launch  triton_amcl.launch  triton_gmapping.launch  triton_hectormapping.launch
catkin_ws/src/stingray_camera/rviz/: triton_amcl.rviz  triton_slam.rviz
catkin_ws/src/stingray_camera/scripts/: teleop_robot.py
catkin_ws/src/stingray_sim/: README.md  package.xml
catkin_ws/src/stingray_sim/launch/: wall_following.launch
catkin_ws/src/stingray_sim/plugins/: model_push.cc
catkin_ws/src/stingray_sim/scripts/: teleop_robot.py
catkin_ws/src/symbols_recognition/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/symbols_recognition/launch/: real_robot.launch  wall_following.launch
catkin_ws/src/symbols_recognition/models/triton/: model.sdf
catkin_ws/src/symbols_recognition/rviz/: lidar.rviz
catkin_ws/src/symbols_recognition/scripts/: P2D1_wallFollower.py  position_publisher.py  real_wall_follower.py  symbol_classifier.py  target_symbol_controller.py
catkin_ws/src/symbols_recognition/worlds/: largemaze.world
nn_training/: __init__.py
nn_training/cnn/: .gitignore  README.md  __init__.py  config.py  data.py  evaluate.py  model.py  plot_results.py  predict.py  train.py  utils.py
nn_training/cnn/checkpoints/: .gitkeep
nn_training/mobilenetv2/: README.md  __init__.py  config.py  data.py  evaluate.py  model.py  plot_results.py  predict.py  train.py
nn_training/mobilenetv2/runs/: .gitkeep
others/report-paper/Results_ Autonomous Symbol Search and Navigation/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
others/report-paper/Results_ Autonomous Symbol Search and Navigation/ieeeconf/: root.tex
