<?xml version="1.0"?>
<package format="2">
  <name>stingray_camera</name>
  <version>0.1.0</version>
  <description>Triton robot camera and RPLIDAR bringup launch package.</description>

  <maintainer email="ping58972@example.com">Triton Robot Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>
</package>
